k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: private-gpt
  labels:
    name: private-gpt
    app: private-gpt
